# nexusclaw

./: .env.example  .gitattributes  .gitignore  API.md  CHANGELOG.md  Dockerfile  Dockerfile.app  LICENSE  README.md  SPEC.md  backup.sh  deploy.sh  docker-compose.yml  healthcheck.sh  install.ps1  install.sh  package.json  pyproject.toml  requirements.txt  setup.html
.github/workflows/: ci.yml
apps/api/: main.py
apps/channels/discord/: bot.py
apps/channels/slack/: bot.py
apps/channels/telegram/: bot.py
apps/model-gateway/: gateway.py  main.py
apps/web/: dashboard.html  index.html  server.py
apps/worker/: indexer.py
docs/: integration-guide.md  rebrand-map.md
docs/blueprint/: NEXUSCLAW_BLUEPRINT_v1.0.md
extensions/chrome/: background.js  content.js  manifest.json  popup.html  popup.js
nexusclaw/: __init__.py  api.py  api_agents.py  api_brain.py  api_conversations.py  api_groupchat.py  api_prompts.py  api_rag.py  api_skills.py  cli.py  config.py  conversations.py  main.py  prompts.py  providers.py  rag.py
nexusclaw/agents/: runtime.py  session.py  tools.py
nexusclaw/agents/groupchat/: agents.py  runner.py  store.py  team.py
scripts/: rebrand.sh
src/: __init__.py
src/autonomy/: __init__.py  executor.py
src/cli/: __init__.py  __main__.py  benchmark.py  cli.py  main.py  session.py
src/evoclaw/: __init__.py  config.json  heartbeat.py
src/knowledge/: __init__.py  manager.py
src/memory/: __init__.py  rag.py  vector_store.py
src/middleware/: __init__.py  rate_limit.py
src/notifications/: __init__.py  email.py
src/onboard/: __init__.py  setup.py  wizard.py
src/plugins/: __init__.py  engine.py
src/prompts/: __init__.py  templates.py
src/providers/: __init__.py  engine.py
src/security/: __init__.py  audit.py
src/soul/: __init__.py  editor.py  engine.py
src/tools/: __init__.py  browser.py  code_exec.py  machine.py  registry.py  web_search.py
src/web/: __init__.py  openroom.py
src/webhooks/: __init__.py  engine.py
tests/: __init__.py  test_api.py
ui/: ClaudePreview.svelte
ui/themes/: README.md  switcher.ts  themes.css
web/: index.html  package-lock.json  package.json  postbuild.js  setup.html  vite.config.ts
web/src/: App.tsx  styles.css
web/src/views/: BrainView.tsx  BrowserView.tsx  ChatView.tsx  CollectionsView.tsx  GroupChatView.tsx  ManagerView.tsx  PromptsView.tsx  RAGView.tsx  SettingsView.tsx  SetupView.tsx  SkillsView.tsx
