[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusclaw"
version = "1.0.0"
description = "NexusClaw — Direct provider AI chat. No LiteLLM."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml",
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.34.0",
    "httpx",
    "python-multipart",
    "sse-starlette",
    "pydantic",
    "structlog",
    "aiosqlite",
    "python-dotenv",
    "pypdf",
    "python-docx",
    "beautifulsoup4",
    "lxml",
    "qdrant-client",
]

[project.scripts]
nexusclaw = "nexusclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexusclaw*"]
